# OpenGLTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Application/: Application.cpp  CMakeLists.txt
Assets/Shaders/: basic-lighting-frag.glsl  depth-testing-frag.glsl  light-casters-frag.glsl  lighting-maps-frag.glsl  materials-frag.glsl  multiple-lights-frag.glsl  multiple-lights-vert.glsl  phong-lighting-frag.glsl  phong-lighting-vert.glsl  shader-frag.glsl  shader-vert.glsl
Assets/Shaders/stencil-testing/: border-color-frag.glsl  stencil-testing-frag.glsl
Include/: OpenGLTemplate.h
Scripts/: Setup.bat  Setup.py
Shaders/: shader-frag.glsl  shader-vert.glsl  shader.frag  shader.vert
Source/: Application.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  Cube.cpp  Cube.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h  Rectangle.cpp  Rectangle.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Transformation.cpp  Transformation.h  Triangle.cpp  Triangle.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  (+1 more)
Source/Development/: ObjectOutline.cpp  ObjectOutline.h  StencilBufferManager.h
